tests/compilation_error/color_addition.ll
color r = RED;
color b = BLUE;
print r + b // sorry, not allowed :(
